# pleiades_accession

./: .gitignore  README.md  pyproject.toml
scripts/: joins2batch.py  make_new.py  match.py  review.py
src/pleiades_accession/: candidates.py  making.py  matching.py  pleiades.py  text.py
tests/: test_candidates.py  test_making.py  test_matching.py  test_pleiades.py
tests/data/: gethin_monasteries.json  lehning_periplus.json
